# discharge

./: README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.js
assets/Illustrator/: logo.ai
electron/: bridge.ts  estuary.ts  main.ts  storage.ts
public/: index.html
src/: App.svelte  App.tsx  Page.tsx  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: estuary.rs  main.rs  preferences.rs  util.rs
src/components/core/: Copy.svelte  Loader.svelte  Tooltip.svelte
src/lib/: file.ts  language.ts  tauri.ts  types.ts
src/pages/: Loading.svelte  Main.svelte  Start.svelte  Welcome.svelte
src/pages/Application/: Files.tsx  Preferences.tsx  Uploading.tsx  index.tsx  styles.ts
src/pages/Main/: Files.svelte  Settings.svelte  Upload.svelte
src/pages/Onboarding/: index.tsx
src/pages/Welcome/: index.tsx  styles.ts
src/providers/: ElectronProvider.tsx
src/styles/: GlobalStyle.ts  global.css
