[package]
name = "discharge"
version = "0.1.0"
description = "Free, secure, unlimited data storage powered by FileCoin."
authors = ["Anthony"]
license = ""
repository = ""
default-run = "discharge"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["clipboard-all", "dialog-open", "shell-open"] }

lazy_static = "1.4.0"
rust-argon2 = "1.0"
rand = "0.8"
reqwest = { version = "0.11.11", features = ["json"] }
chrono = "0.4.11"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
